fixing my linter error

--- a/index.html
+++ b/index.html
@@ -13,9 +13,6 @@
 
 <body>
   <div class="sect1">
-    <div class="image">
-      <!-- <img src="./assets/images/name.jpg" alt=""> -->
-    </div>
     <div class="class11">
       <h1>BrandName</h1>
       <div class="nav">
@@ -27,7 +24,7 @@
       <h3 class="logue">Login</h3>
       <div class="become">
         <h2>Become a member</h2>
-        <img src="./assets/images/Vector (1).png" alt="" class="six">
+        <img src="./assets/images/Vector (1).png" class="six">
       </div>
     </div>
     <div class="container">
@@ -41,7 +38,7 @@
       </div>
       <div class="class13">
         <p class="para"> Book Appointment</p>
-        <form action="">
+        <form>
           <label for="">Name* <br><input type="text" placeholder="Full Name*" required></label>
           <label for="">Email* address <br> <input type="text" placeholder="example@gmail.com" required></label>
           <label for="">Departement* <br>
@@ -302,7 +299,7 @@
   <!-- section7 -->
   <section class="sect7">
     <div class="class71">
-      <img src="./assets/images/media.png" alt="">
+      <img src="./assets/images/media.png" class="pic" alt="">
       <div class="para4">
         <p class="para"><strong>Book Appointment</strong></p>
         <form action="">
@@ -327,20 +324,20 @@
   <!-- section8 -->
   <section class="sect8">
     <div class="class81">
-      <h5><strong>Get In Touch</strong></h5>
-      <p class="four">the quick fox jumps over the <br>lazy dog</p>
+      <h5 class="fives"><strong>Get In Touch</strong></h5>
+      <p class="fours">the quick fox jumps over the <br>lazy dog</p>
       <img src="./assets/images/social media.png" alt="" class="five">
     </div>
     <div class="class82">
-      <h5><strong>Company info</strong></h5>
+      <h5 class="fives"><strong>Company info</strong></h5>
       <p class="four">About Us <br>Carrier <br>We are hiring <br>Blog</p>
     </div>
     <div class="class82">
-      <h5><strong>Resources</strong></h5>
+      <h5 class="fives"><strong>Resources</strong></h5>
       <p class="four">Business Marketing <br>User Analytic <br>Live Chat <br> Unlimited Support</p>
     </div>
     <div class="class82">
-      <h5><strong>Features</strong></h5>
+      <h5 class="fives"><strong>Features</strong></h5>
       <p class="four">IOS & Android <br>Watch a Demo <br>Customers <br>API</p>
     </div>
   </section>
